--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 # CMakeLists.txt for core
 
+find_package(Qt6 6.2 REQUIRED COMPONENTS Core)
+
 # Define library sources and headers
 set(LIB_SOURCES
     src/model.cpp
@@ -14,5 +16,12 @@ set(LIB_HEADERS
 # Create the library target
 add_library(core ${LIB_SOURCES} ${LIB_HEADERS})
 
+target_link_libraries(core PRIVATE
+    Qt6::Core
+)
+
 # Specify include directories for the library
 target_include_directories(core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+# Specify compile features or requirements for your library
+target_compile_features(core PUBLIC cxx_std_23)
